--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scroll": "^1.9.0",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
+    "swiper": "^11.2.8",
     "three": "^0.164.1"
   },
   "devDependencies": {
